@@ -1,3 +1,9 @@
+2000-08-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (read): Check returned Image for embedded
+ 	exception, as well as the existing parameter check.  This fixes
+ 	the bug that warnings are not reported.
+
 2000-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* test/*.cpp demo/*.cpp: Added call to MagickIncarnate() to set
